added homepage form

--- a/dexam/src/app/views/landing/components/carousel/carousel.component.html
+++ b/dexam/src/app/views/landing/components/carousel/carousel.component.html
@@ -63,9 +63,51 @@
       </h1>
     </div>
   </div>
+<!--  <div id="image">-->
   <picture>
     <source media="(min-width: 750px)" srcset="https://assets2.varsitytutors.com/vt-homepage/images/components/heroes/funding-announcement/large-2d13fb6b0b.jpg, https://assets2.varsitytutors.com/vt-homepage/images/components/heroes/funding-announcement/large@2x-1f6291187e.jpg 2x">
     <source srcset="https://assets2.varsitytutors.com/vt-homepage/images/components/heroes/funding-announcement/small-87a767023e.jpg, https://assets2.varsitytutors.com/vt-homepage/images/components/heroes/funding-announcement/small@2x-463fb3cf8b.jpg 2x">
+
     <img alt="Student enjoying his 1-on-1 tutoring with Varsity Tutors" class="edge-hero__image" src="https://assets2.varsitytutors.com/vt-homepage/images/components/heroes/funding-announcement/large-2d13fb6b0b.jpg">
-</picture>
+  </picture>
+<!--  </div>-->
+<!--  <div id="contact-form">-->
+    <div class="form-black-alpha">
+      <div class="form-black-alpha__title">Need help with your home work?</div>
+<!--      <p class="form-black-alpha__text">Search thousands of local tutors in over 500 subjects</p>-->
+      <form id="mainpage-search-subjects" class="form-inline landing-search" action="/" method="get">
+<!--        <input type="hidden" name="LandingUrl" value="/">-->
+<!--        <div class="form-group form-black-alpha__elem landing-search-elem landing-search-elem&#45;&#45;zip">-->
+<!--        <span class="form-black-alpha__elem_addon">-->
+<!--        <img src="/assets/7aa9a026/img/book-transparent-icon.svg" alt="">-->
+<!--        </span>-->
+<!--        <select id="w0" class="landing-search-select selectized" name="subject" placeholder="Subject" tabindex="-1" style="display: none;">-->
+<!--          <option value="" selected="selected"></option></select>-->
+<!--          <div class="selectize-control landing-search-select single">-->
+<!--            <div class="selectize-input items not-full">-->
+<!--              <input type="text" autocomplete="off" tabindex="" id="w0-selectized" placeholder="Subject" style="width: 71px; opacity: 1; position: relative; left: 0px;">-->
+<!--            </div>-->
+<!--            <div class="selectize-dropdown single landing-search-select" style="display: none; width: 320px; top: 60px; left: 0px;">-->
+<!--              <div class="selectize-dropdown-content">-->
+
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="form-group form-black-alpha__elem">-->
+<!--          <input type="text" name="zipCode" id="student-search-zipcode" class="form-control input-big form-black-alpha__elem_input landing-search-zip xs" value="89135" placeholder="ZIP" maxlength="5">-->
+<!--          <span class="form-black-alpha__elem_addon">-->
+<!--        <img class="location-icon" src="/assets/7aa9a026/img/location-icon.svg" alt="TUTORS LOCATION">-->
+<!--        </span>-->
+<!--        </div>-->
+        <button class="form-black-alpha__button btn btn-full-width btn-big" type="submit">GET STARTED</button>
+      </form>
+<!--      <form class="form-inline md-form form-sm">-->
+
+<!--        <button mdbBtn type="button" class="waves-light btn-full-width" mdbWavesEffect (click)="show()"><div class="text-white">GET STARTED</div></button>-->
+<!--        &lt;!&ndash;                <button mdbBtn type="button" color="amber" class="waves-light" (click)="startUpload()" mdbWavesEffect>Submit homework</button>&ndash;&gt;-->
+<!--        </form>-->
+    </div>
+<!--    thanks you sir-->
+<!--  </div>-->
 </div>
