--- a/dexam/src/app/views/landing/pages/chat/chat.component.html
+++ b/dexam/src/app/views/landing/pages/chat/chat.component.html
@@ -100,7 +100,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/opportunities']">
-            <i class="ni ni-pin-3 text-orange"></i> OPPORTUNITIES
+            <i class="ni ni-pin-3 text-orange"></i> TUTORING OPPORTUNITIES
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " [routerLink]="['/landing/gigs']">
+            <i class="ni ni-pin-3 text-orange"></i> QUICK GIGS
           </a>
         </li>
         <li class="nav-item">
