--- a/dexam/src/app/views/landing/pages/opportunities/opportunities.component.html
+++ b/dexam/src/app/views/landing/pages/opportunities/opportunities.component.html
@@ -90,47 +90,47 @@
       <!-- Navigation -->
       <ul class="navbar-nav">
         <li class="nav-item active ">
-          <a class=" nav-link " [routerLink]="['/landing/v9']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
+          <a class=" nav-link " [routerLink]="['/landing/dashboard']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/schedule']">
-            <i class="ni ni-planet text-blue"></i> SCHEDULE
+            <i class="ni ni-planet text-blue"></i> Schedule
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/opportunities']">
-            <i class="ni ni-pin-3 text-orange"></i> TUTORING OPPORTUNITIES
+            <i class="ni ni-pin-3 text-orange"></i> Tutoring Opportunities
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/gigs']">
-            <i class="ni ni-pin-3 text-orange"></i> QUICK GIGS
+            <i class="ni ni-pin-3 text-orange"></i> Quick gigs
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/chat']">
-            <i class="ni ni-single-02 text-yellow"></i> MESSAGES
+            <i class="ni ni-single-02 text-yellow"></i> Messages
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link  active " [routerLink]="['/landing/billing']">
-            <i class="ni ni-bullet-list-67 text-red"></i> BILLING
+            <i class="ni ni-bullet-list-67 text-red"></i> Billing
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/students']">
-            <i class="ni ni-key-25 text-info"></i> STUDENTS
+            <i class="ni ni-key-25 text-info"></i> Students
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/tutors']">
-            <i class="ni ni-circle-08 text-pink"></i> TUTORS
+            <i class="ni ni-circle-08 text-pink"></i> Tutors
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/profile']">
-            <i class="ni ni-key-25 text-info"></i> PROFILE
+            <i class="ni ni-key-25 text-info"></i> Profile
           </a>
         </li>
       </ul>
@@ -225,93 +225,7 @@
   <div class="header bg-default pb-8 pt-5 pt-md-8">
     <div class="container-fluid">
       <div class="header-body">
-        <!-- Card stats -->
-<!--        <div class="row">-->
-<!--          <div class="col-xl-3 col-lg-6">-->
-<!--            <div class="card card-stats mb-4 mb-xl-0">-->
-<!--              <div class="card-body">-->
-<!--                <div class="row">-->
-<!--                  <div class="col">-->
-<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>-->
-<!--                    <span class="h2 font-weight-bold mb-0">350,897</span>-->
-<!--                  </div>-->
-<!--                  <div class="col-auto">-->
-<!--                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">-->
-<!--                      <i class="fas fa-chart-bar"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
-<!--                  <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>-->
-<!--                  <span class="text-nowrap">Since last month</span>-->
-<!--                </p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6">-->
-<!--            <div class="card card-stats mb-4 mb-xl-0">-->
-<!--              <div class="card-body">-->
-<!--                <div class="row">-->
-<!--                  <div class="col">-->
-<!--                    <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>-->
-<!--                    <span class="h2 font-weight-bold mb-0">2,356</span>-->
-<!--                  </div>-->
-<!--                  <div class="col-auto">-->
-<!--                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">-->
-<!--                      <i class="fas fa-chart-pie"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
-<!--                  <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>-->
-<!--                  <span class="text-nowrap">Since last week</span>-->
-<!--                </p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6">-->
-<!--            <div class="card card-stats mb-4 mb-xl-0">-->
-<!--              <div class="card-body">-->
-<!--                <div class="row">-->
-<!--                  <div class="col">-->
-<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>-->
-<!--                    <span class="h2 font-weight-bold mb-0">924</span>-->
-<!--                  </div>-->
-<!--                  <div class="col-auto">-->
-<!--                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">-->
-<!--                      <i class="fas fa-users"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
-<!--                  <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>-->
-<!--                  <span class="text-nowrap">Since yesterday</span>-->
-<!--                </p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6">-->
-<!--            <div class="card card-stats mb-4 mb-xl-0">-->
-<!--              <div class="card-body">-->
-<!--                <div class="row">-->
-<!--                  <div class="col">-->
-<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>-->
-<!--                    <span class="h2 font-weight-bold mb-0">49,65%</span>-->
-<!--                  </div>-->
-<!--                  <div class="col-auto">-->
-<!--                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">-->
-<!--                      <i class="fas fa-percent"></i>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
-<!--                  <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>-->
-<!--                  <span class="text-nowrap">Since last month</span>-->
-<!--                </p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+
       </div>
     </div>
   </div>
@@ -322,11 +236,11 @@
         <!--        <input type="text" class="form-control" [(ngModel)]="searchText" (keyup)="searchItems()" id="search-input"-->
         <!--               mdbInput>-->
         <!--        <label for="search-input">Search</label>-->
-        <h3 class="centre-text">Opportunities</h3>
+        <h3 class="centre-text">Tutoring Opportunities</h3>
         <!--      </div>-->
       </div>
 
-      <table mdbTable #tableEl="mdbTable" stickyHeader="true" hover="true" striped="true" class="z-depth-1 table-sm">
+      <table mdbTable #tableEl="mdbTable" stickyHeader="true" hover="true" striped="true" class="z-depth-1 table-sm ">
         <thead class="sticky-top bg-default white-text">
         <tr>
           <th *ngFor="let head of headElements; let i = index" [mdbTableSort]="elements" [sortBy]="headElements[i]"
@@ -336,15 +250,14 @@
         </thead>
         <tbody #row>
         <tr mdbTableCol (rowCreated)="onRowCreate($event)" (rowRemoved)="onRowRemove($event)" *ngFor="let el of elements; let i = index">
-          <th *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex" scope="row">{{el.subject}}</th>
-          <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex" >{{el.subject}}</td>
+          <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex" scope="row">{{el.subject}}</td>
+          <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex" >{{el.start_date}}</td>
           <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">{{el.duration}}</td>
           <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">
-            <button mdbBtn color="orange" size="sm" mdbWavesEffect type="button" class="m-0 " data-toggle="modal" data-target="#basicExample" (click)="basicModal.show()">
+            <button mdbBtn outline="true" size="sm" mdbWavesEffect type="button" class="m-0 red-outline-button " data-toggle="modal" data-target="#basicExample" (click)="basicModal.show()">
               Accept</button>
           </td>
-          <div mdbModal #basicModal="mdbModal" class="modal fade bottom" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel"
-               aria-hidden="true">
+          <div mdbModal #basicModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true" >
             <div class="modal-dialog modal-dialog-scrollable" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -599,205 +512,7 @@
       </table>
 
     </div>
-    <div class="row">
-      <!-- Section: Social newsfeed v.1 -->
-      <section class="my-5">
 
-        <!-- Grid row -->
-        <div class="row">
-
-          <!-- Grid column -->
-          <div class="col-md-12">
-
-            <!-- Newsfeed -->
-            <div class="mdb-feed">
-
-              <!-- First news -->
-              <div class="news">
-
-                <!-- Label -->
-                <div class="label">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-1-mini.jpg" class="rounded-circle z-depth-1-half">
-                </div>
-
-                <!-- Excerpt -->
-                <div class="excerpt">
-
-                  <!-- Brief -->
-                  <div class="brief">
-                    <a class="name">John Doe</a> added you as a friend
-                    <div class="date">1 hour ago</div>
-                  </div>
-
-                  <!-- Feed footer -->
-                  <div class="feed-footer">
-                    <a class="like">
-                      <mdb-icon fas icon="heart"></mdb-icon>
-                      <span>5 likes</span>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- Excerpt -->
-
-              </div>
-              <!-- First news -->
-
-              <!-- Second news -->
-              <div class="news">
-
-                <!-- Label -->
-                <div class="label">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(17)-mini.jpg" class="rounded-circle z-depth-1-half">
-                </div>
-
-                <!-- Excerpt -->
-                <div class="excerpt">
-
-                  <!-- Brief -->
-                  <div class="brief">
-                    <a class="name">Anna Smith</a> added
-                    <a> 2 new illustrations</a>
-                    <div class="date">4 hours ago</div>
-                  </div>
-
-                  <!-- Added images -->
-                  <div class="added-images">
-                    <img src="https://mdbootstrap.com/img/Photos/Others/images/71.jpg" class="z-depth-1 rounded mb-md-0 mb-2">
-                    <img src="https://mdbootstrap.com/img/Photos/Others/images/74.jpg" class="z-depth-1 rounded">
-                  </div>
-
-                  <!-- Feed footer -->
-                  <div class="feed-footer">
-                    <a class="like">
-                      <mdb-icon fas icon="heart"></mdb-icon>
-                      <span>18 likes</span>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- Excerpt -->
-
-              </div>
-              <!-- Second news -->
-
-              <!-- Third news -->
-              <div class="news">
-
-                <!-- Label -->
-                <div class="label">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9)-mini.jpg" class="rounded-circle z-depth-1-half">
-                </div>
-
-                <!-- Excerpt -->
-                <div class="excerpt">
-
-                  <!-- Brief -->
-                  <div class="brief">
-                    <a class="name">Danny Moore</a> added you as a friend
-                    <div class="date">7 hours ago</div>
-                  </div>
-
-                  <!-- Feed footer -->
-                  <div class="feed-footer">
-                    <a class="like">
-                      <mdb-icon fas icon="heart"></mdb-icon>
-                      <span>11 likes</span>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- Excerpt -->
-
-              </div>
-              <!-- Third news -->
-
-              <!-- Fourth news -->
-              <div class="news">
-
-                <!-- Label -->
-                <div class="label">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(18)-mini.jpg" class="rounded-circle z-depth-1-half">
-                </div>
-
-                <!-- Excerpt -->
-                <div class="excerpt">
-
-                  <!-- Brief -->
-                  <div class="brief">
-                    <a class="name">Lili Rose</a> posted on his page
-                    <div class="date">2 days ago</div>
-                  </div>
-
-                  <!-- Added text -->
-                  <div class="added-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero inventore,
-                    iste quas libero eius? Vitae sint neque animi alias sunt dolor, accusantium ducimus, non placeat
-                    voluptate.</div>
-
-                  <!-- Feed footer -->
-                  <div class="feed-footer">
-                    <a class="like">
-                      <mdb-icon fas icon="heart"></mdb-icon>
-                      <span>7 likes</span>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- Excerpt -->
-
-              </div>
-              <!-- Fourth news -->
-
-              <!-- Fifth news -->
-              <div class="news">
-
-                <!-- Label -->
-                <div class="label">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20)-mini.jpg" class="rounded-circle z-depth-1-half">
-                </div>
-
-                <!-- Excerpt -->
-                <div class="excerpt mb-0">
-
-                  <!-- Brief -->
-                  <div class="brief">
-                    <a class="name">Kate Harrison</a> added
-                    <a> 2 new photos</a> of you
-                    <div class="date">3 days ago</div>
-                  </div>
-
-                  <!-- Added images -->
-                  <div class="added-images">
-                    <img src="https://mdbootstrap.com/img/Photos/Others/images/29.jpg" class="z-depth-1 rounded mb-md-0 mb-2">
-                    <img src="https://mdbootstrap.com/img/Photos/Others/images/31.jpg" class="z-depth-1 rounded">
-                  </div>
-
-                  <!-- Feed footer -->
-                  <div class="feed-footer">
-                    <a class="like">
-                      <mdb-icon fas icon="heart"></mdb-icon>
-                      <span>53 likes</span>
-                    </a>
-                  </div>
-
-                </div>
-                <!-- Excerpt -->
-
-              </div>
-              <!-- Fifth news -->
-
-            </div>
-            <!-- Newsfeed -->
-
-          </div>
-          <!-- Grid column -->
-
-        </div>
-        <!-- Grid row -->
-
-      </section>
-      <!-- Section: Social newsfeed v.1 -->
-    </div>
   </div>
 
 </div>
