--- a/dexam/src/app/views/landing/pages/opportunities/opportunities.component.scss
+++ b/dexam/src/app/views/landing/pages/opportunities/opportunities.component.scss
@@ -27,3 +27,8 @@ tr:nth-child(even) {background-color: #ffffff;}
 .normal-font{
   font-weight: bolder !important;
 }
+.red-outline-button{
+  background-color: #fff;
+  color: #e1245a;
+  border-color: #e1245a;
+}
