--- a/dexam/src/app/views/landing/pages/profile/profile.component.scss
+++ b/dexam/src/app/views/landing/pages/profile/profile.component.scss
@@ -28,7 +28,7 @@
 .centre-button {
   margin: auto !important;
   width: 30%;
-  background-color: #ff9800 !important;
+  background-color: #4285f4  !important;
   //padding: 10px;
 }
 //.lever:after {
@@ -37,7 +37,7 @@
 //}
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #ff9800;
+  background-color: #4285f4 ;
   left: 1.5rem;
 }
 .orange-button{
