--- a/dexam/src/app/views/landing/pages/schedule/schedule.component.scss
+++ b/dexam/src/app/views/landing/pages/schedule/schedule.component.scss
@@ -37,6 +37,15 @@
 .orange-button{
   background-color: #ec9e3e;
 }
+
+.red-button{
+  background-color: #e1245a;
+}
+.red-outline-button{
+  background-color: #fff;
+  color: #e1245a;
+  border-color: #e1245a;
+}
 .bg-default{
   background-color: #22356e !important;
   padding-top: 0rem !important;
