--- a/dexam/src/app/views/landing/components/carousel/carousel.component.scss
+++ b/dexam/src/app/views/landing/components/carousel/carousel.component.scss
@@ -38,3 +38,91 @@
 .edge-hero__heading {
   padding: .5rem 0;
 }
+#image{
+  //top:0;
+  //left:0;
+  //right:0;
+  //bottom:0;
+  position:absolute;
+}
+
+#contact-form {
+  margin-top: 1.5rem;
+  width: 500px;
+  height: 400px;
+  top: 10%;
+  left: 10%;
+  position:absolute;
+  z-index:100000;
+}
+
+@media (max-width: 991px){
+  .form-black-alpha {
+    background: 0 0;
+    //background: #e1245a;
+  }
+}
+@media (max-width: 750px){
+  .form-black-alpha {
+    background: rgba(0, 0, 0, .45);
+    position: absolute;
+    left: 0;
+    bottom: 20%;
+    width: 100%;
+    //margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-black-alpha__title {
+    color: #ffffff;
+    margin-top: 5%;
+  }
+  .btn-full-width {
+    width: 60%;
+    background: #e1245a;
+    margin: auto;
+    margin-bottom: 5%;
+    color: #ffffff !important;
+  }
+  .form-black-alpha__button h3 {
+    color: #ffffff;
+  }
+}
+@media (min-width: 750px) {
+  .form-black-alpha {
+    background: rgba(0, 0, 0, .45);
+    padding: 15px 35px 35px;
+    border-radius: 10px;
+    z-index: 10;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: absolute;
+    left: 4%;
+    bottom: 40%;
+    //margin-left: -370px;
+    -webkit-transform: translateY(50%);
+    transform: translateY(50%);
+    max-width: 740px;
+  }
+
+  .form-black-alpha__title {
+    color: #ffffff;
+    font-size: 1.8rem;
+  }
+  .btn-full-width {
+    width: 60%;
+    background: #e1245a;
+    margin: auto;
+    margin-top: 5%;
+    color: #ffffff !important;
+  }
+  .form-black-alpha__button {
+    color: #ffffff;
+    font-size: 1.3rem;
+  }
+}
