--- a/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.html
+++ b/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.html
@@ -79,7 +79,7 @@
 <!--    <button type="submit" class="submit-button"> &lt;!&ndash;data-toggle="modal" data-target="#appointment-form-modal"> &ndash;&gt;-->
 <!--        Request appointment <i class="ni ni-fat-add"></i>-->
 <!--    </button>-->
-    <button mdbBtn color="orange" size="sm" mdbWavesEffect type="submit" class="m-0 btn-warning">Request</button>
+    <button mdbBtn  size="sm" mdbWavesEffect type="submit" class="m-0 red-button">Request</button>
     </div>
 
 </div>
