--- a/dexam/src/app/views/landing/pages/studentspage/studentspage.component.html
+++ b/dexam/src/app/views/landing/pages/studentspage/studentspage.component.html
@@ -90,47 +90,47 @@
       <!-- Navigation -->
       <ul class="navbar-nav">
         <li class="nav-item active ">
-          <a class=" nav-link " [routerLink]="['/landing/v9']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
+          <a class=" nav-link " [routerLink]="['/landing/dashboard']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/schedule']">
-            <i class="ni ni-planet text-blue"></i> SCHEDULE
+            <i class="ni ni-planet text-blue"></i> Schedule
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/opportunities']">
-            <i class="ni ni-pin-3 text-orange"></i> TUTORING OPPORTUNITIES
+            <i class="ni ni-pin-3 text-orange"></i> Tutoring Opportunities
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/gigs']">
-            <i class="ni ni-pin-3 text-orange"></i> QUICK GIGS
+            <i class="ni ni-pin-3 text-orange"></i> Quick gigs
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link " [routerLink]="['/landing/chat']">
-            <i class="ni ni-single-02 text-yellow"></i> MESSAGES
+            <i class="ni ni-single-02 text-yellow"></i> Messages
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link  active " [routerLink]="['/landing/billing']">
-            <i class="ni ni-bullet-list-67 text-red"></i> BILLING
+            <i class="ni ni-bullet-list-67 text-red"></i> Billing
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/students']">
-            <i class="ni ni-key-25 text-info"></i> STUDENTS
+            <i class="ni ni-key-25 text-info"></i> Students
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/tutors']">
-            <i class="ni ni-circle-08 text-pink"></i> TUTORS
+            <i class="ni ni-circle-08 text-pink"></i> Tutors
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/landing/profile']">
-            <i class="ni ni-key-25 text-info"></i> PROFILE
+            <i class="ni ni-key-25 text-info"></i> Profile
           </a>
         </li>
       </ul>
